@@ -1,4 +1,14 @@
-### refactor(search.py): Refactored and optimized code for search.py (HEAD -> feat/apachesis)
+### feat(ApacheSIS): Replaced GDAL call to GML files generated by Apache SIS. Added script to generate GML files from WKT with Apache SIS. Updated generated GML test. (HEAD -> feat/apachesis)
+>Thu, 11 Apr 2024 15:00:17 +0200
+
+>Author: Emile-Muller (emile.muller.contact@gmail.com)
+
+>Commiter: Emile-Muller (emile.muller.contact@gmail.com)
+
+
+
+
+### refactor(search.py): Refactored and optimized code for search.py
 >Thu, 11 Apr 2024 14:38:17 +0200
 
 >Author: Emile-Muller (emile.muller.contact@gmail.com)
